--- a/src/app/components/stock/categories/item-type/item-type.component.html
+++ b/src/app/components/stock/categories/item-type/item-type.component.html
@@ -71,7 +71,7 @@
                       
                       <div class="dropdown-menu" [class.show]="isDropdownOpen">
                         <a class="dropdown-item" (click)="openModalForSelected()">تعديل</a>
-                        <a class="dropdown-item" href="#">عرض</a>
+                        <!-- <a class="dropdown-item" href="#">عرض</a> -->
                         <a class="dropdown-item" (click)="deleteItemType()">حذف</a>
                       </div>
                     </div>
