--- a/src/app/components/sales/clients/contacts/contacts.component.html
+++ b/src/app/components/sales/clients/contacts/contacts.component.html
@@ -291,7 +291,7 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label for="taskField4">جنسية جهه التواصل</label>
-                                    <select id="taskField4" name="supplier" formControlName="supplier" class="form-control custom-input">
+                                    <select id="taskField4" name="nationality" formControlName="nationality" class="form-control custom-input">
                                         <option value="" disabled selected>قم باختيار جنسية جهه التواصل</option>
                                         <option value="1">1</option>
                                         <option value="2">2</option>
@@ -494,7 +494,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="taskField4">جنسية جهه التواصل</label>
-                                <select id="taskField4" name="supplier" formControlName="supplier" class="form-control custom-input">
+                                <select id="taskField4" name="nationality" formControlName="nationality" class="form-control custom-input">
                                     <option value="" disabled selected>قم باختيار جنسية جهه التواصل</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -544,12 +544,12 @@
                     <!-- Buttons for actions -->
                     <div class="row mb-4">
                         <div class="col-md-12 text-start">
-                            <button class="btn btn-outline-primary me-3">الغاء</button>
+                            <button type="button" class="btn btn-outline-primary me-3">الغاء</button>
                             <button type="button" class="btn btn-primary m-2">حفظ</button>
                         </div>
                     </div>
 
-
+<!-- 
                     <div class="container mt-3 mb-3">
                         <div class="row">
                             <div class="col-12 d-flex justify-content-between align-items-center flex-row-reverse">
@@ -570,7 +570,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
 
                     <!-- There was code here -->
